manifests/gatekeeper-policies/constraints/disallow-privileged-containers.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: disallow-privileged
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "DaemonSet"]
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptNamespaces:
      - istio-system
      - istio-operator
      - kube-system
      - gatekeeper-system
      - team1
      - team2
